[수정]account 네임스페이스 제거

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,7 +15,7 @@
     {% if request.user.is_authenticated %}
         <ul class="menu">
             <li {% if section == 'dashboard' %}class="selected"{% endif %}>
-                <a href="{% url 'account:dashboard' %}">My dashboard</a>
+                <a href="{% url 'dashboard' %}">My dashboard</a>
             </li>
             <li {% if section == 'images' %}class="selected"{% endif %}>
                 <a href="#">Images</a>
@@ -28,12 +28,12 @@
     <span class="user">
         {% if request.user.is_authenticated %}
             Hello {{ request.user.first_name|default:request.user.username }},
-            <form action="{% url 'account:logout' %}" method="post" style="display: inline;float:right;">
+            <form action="{% url 'logout' %}" method="post" style="display: inline;float:right;">
                 {% csrf_token %}
                 <input type="submit" value="Logout" style="padding: 0;">
             </form>
         {% else %}
-            <a href="{% url 'account:login' %}">Log-in</a>
+            <a href="{% url 'login' %}">Log-in</a>
         {% endif %}
     </span>
 </div>
